# APL_Project

./: README.md
CPP/AggregateInvoicesByProductYearMonth/: AggregateInvocesByProductYearMonth.cpp  CMakeLists.txt
CS/SupabaseApiCall/: SupabaseApiCall.slnx
CS/SupabaseApiCall/SupabaseApiCall/: Program.cs  SupabaseApiCall.csproj  SupabaseApiCall.http  appsettings.json
CS/SupabaseApiCall/SupabaseApiCall/Controllers/: ClientiController.cs
CS/SupabaseApiCall/SupabaseApiCall/Infrastructure/: JWTValidator.cs  SuparbaseInizializer.cs
CS/SupabaseApiCall/SupabaseApiCall/Models/: Articolo.cs  Cliente.cs  FatturaCliente.cs  FatturaFornitore.cs  Fornitore.cs
CS/SupabaseApiCall/SupabaseApiCall/Repositories/: ArticoloRepository.cs  (+7 more)
Go/Sincronize_Data/: .env  go.mod  go.sum  main.go
Go/Sincronize_Data/db/: sqlServer.go  supabase.go
Go/Sincronize_Data/models/: Anagrafica.go  Articolo.go  Cliente.go  Documento.go  FatturaCliente.go  FatturaFornitore.go  Fornitore.go
Go/Sincronize_Data/repository/: localrepo.go  remoterepo.go
Go/Sincronize_Data/util/: clear_remote_repo.go
Go/auth/: .env  go.mod  go.sum  main.go  users.db
Go/auth/db/: db.go
Go/auth/models/: user.go
Go/auth/registration-test/: create-user.http  login.http
Go/auth/route/: routeList.go  users.go
Go/auth/utils/: hash.go  jwt.go
Python/ViewData/: app.py
Python/ViewData/assets/: login.css
Python/ViewData/config/: settings.py
Python/ViewData/pages/: dashboard.py  load_fatture.py  login.py
Python/ViewData/services/: auth.py  clienti_api.py
Python/ViewData/utils/: constants.py
(+28 files in other folders)
